Add gh actions to deploy the changes to the repo

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://Corefinder89.github.io/myportfolio'
 languageCode = 'en-us'
 title = 'My portfolio'
 
