--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://Corefinder89.github.io/myportfolio'
+baseURL = 'https://corefinder89.github.io/myportfolio'
 languageCode = 'en-us'
 title = 'My portfolio'
 
